# Django_CW

./: README.md  blog.json  groups3.json  groups4.json  mailing.json  pyproject.toml  users.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  jobs.py  models.py  receivers.py  task.py  urls.py  utils.py  views.py
mailing/management/commands/: run_aps.py  send_mail_plural.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0002_mailing_users_message_users.py  0003_alter_mailing_users_alter_message_users.py  0003_mailing_next_send_date_alter_mailing_interval.py  0004_rename_users_mailing_user_rename_users_message_user_and_more.py  0005_alter_client_options_alter_mailing_options.py  0006_alter_client_options_alter_mailing_options_and_more.py
mailing/templates/mailing/: client_confirm_delete.html  client_form.html  client_list.html  contacts.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: nav_bar.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: not_mail.html  reset_password.html  user_form.html
