[tool.poetry]
name = "django-cw"
version = "0.1.0"
description = ""
authors = ["Ilya Landers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
